@@ -1,15 +1,10 @@
 [Suggestions from Fityk users survey are not included here yet.]
 
-* "File" menu should be replaced with "Session". Some items can be moved
-  to "GUI". 
-
 * new command line options: -d and --data that will load data file
   Perhaps 'fityk nacl01.dat' should also load data file?
   Automatically recognize if it is script or data?
 
 * data viewer (grid); 
-
-* document source with Doxygen [IMPORTANT]  
 
 * document s.guess command 
 
@@ -89,7 +84,9 @@
 
 * write documentation for fwhm-correction and height-correction (m.set) 
 
-* single ergonomic interface changing colors of everything
+* (GUI) fonts used for scale labels should be configurable
+
+* (GUI) single ergonomic interface changing colors of everything
 
 * short-cuts for menu commands (Ctrl-O, F1, etc.)
 
@@ -106,7 +103,7 @@
   error distribution.
 
 * f.info -- more informations about error, confidence limits, etc.
-  graphical interface to f.info
+  graphical interface to f.info; easy way to get parameters with errors
 
 * problem: when gnuplot is not available, cfityk abort exits in some situations
 
