@@ -2,7 +2,6 @@
 ; InnoSetup script. It is used to make MS Windows installer.
 
 ;TODO: samples in menu, if 'associate' task is selected
-;      output setup filename should be fityk-@VERSION@-setup.exe 
 
 [Setup]
 AppName=fityk
@@ -11,6 +10,7 @@ AppPublisher=Marcin Wojdyr
 AppPublisherURL=http://www.unipress.waw.pl/~wojdyr
 AppVersion=@VERSION@
 AppVerName=Fityk @VERSION@
+OutputBaseFilename=fityk-@VERSION@-setup
 UninstallFilesDir={app}
 DefaultDirName={pf}\Fityk
 DefaultGroupName=Fityk
@@ -29,10 +29,8 @@ Source: doc\fityk_tips.txt; DestDir: {app}
 Source: doc\fitykhelp.chm; DestDir: {app} 
 Source: doc\fitykhelp.htb; DestDir: {app} 
 Source: samples\README; DestDir: {app}\samples\ 
-Source: samples\nacl01.dat; DestDir: {app}\samples\ 
-Source: samples\nacl01.fit; DestDir: {app}\samples\ 
-Source: samples\SiC_Zn.dat; DestDir: {app}\samples\ 
-Source: samples\SiC_Zn.fit; DestDir: {app}\samples\ 
+Source: samples\*.dat; DestDir: {app}\samples\ 
+Source: samples\*.fit; DestDir: {app}\samples\ 
 Source: fityk.url; DestDir: {app}
 
 [Icons]
